# ProtoPoke

./: .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: docs.json  index.md  installation.md
docs/api/: examples.md  usage.md
docs/core/: config.md  forge.md  getting-started.md  intercept.md  traffic.md
docs/development/: architecture.md  contributing.md
docs/getting-started/: installation.md  quickstart.md  (+1 more)
examples/: dns_framer.py  frame_size_framer.py  intercept_demo.py  protocol_intercept_demo.py  protocol_replay_demo.py  protocol_tamper_demo.py  replay_demo.py  simple_proxy.py  tamper_demo.py
protopoke/: __init__.py  analysis.py  api.py  config.py  models.py
tcpproxy/: __init__.py  api.py  config.py  models.py
tests/: conftest.py  test_analysis.py  test_config_serialization.py  test_events.py  test_forge.py  test_forge_models.py  test_framing.py  test_fuzzing.py  test_fuzzing_integration.py  test_inject_to_client.py  test_inject_to_server.py  test_intercept.py  test_knowledge.py  test_mcp_analysis_tools.py  test_mcp_host.py  test_mcp_knowledge_tools.py  test_mcp_server.py  test_mcp_stdio_bridge.py  test_models.py  test_playbook_custom.py  test_project_manager.py  test_protocol_definition.py  test_protocol_display.py  test_protocol_parser.py  test_proxy_integration.py  test_repeater_models.py  test_replay.py  test_rules.py  test_segmented_control.py  test_send_frame.py  test_sequence.py  test_sequencer.py  test_session.py  test_socks5_handshake.py  test_socks5_proxy.py  test_sqlite_storage.py  test_tamper.py  test_tls.py  test_to_dict_serialisation.py  test_to_dict_serialization.py  (+4 more)
(+180 files in other folders)
