[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "protopoke"
version = "0.1.0"
description = "A personal TCP proxy / interception tool (Burp Suite for arbitrary protocols)"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=41",  # TLS MITM: CA generation, cert signing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["protopoke*"]
